--- a/package.json
+++ b/package.json
@@ -8,16 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:browser:prod": "ng build --prod",
-    "build:browser:serverless": "ng build --prod --base-href /production/",
-    "build:serverless": "npm run build:browser:serverless && npm run build:server:serverless",
-    "build:prod": "npm run build:browser:prod && npm run build:server:prod",
-    "server": "node local.js",
-    "build:prod:deploy": "npm run build:prod && npm run deploy",
-    "build:serverless:deploy": "npm run build:serverless && npm run deploy",
-    "deploy": "serverless deploy",
-    "build:server:prod": "webpack --config webpack.server.config.js --progress --colors",
-    "build:server:serverless": "webpack --config webpack.server.config.js --progress --colors"
+    "build:prod": "ng build --prod",
+    "push:s3": "cd dist/portfolio && aws s3 cp . s3://www.brooklynpedley.co.uk --recursive"
   },
   "private": true,
   "dependencies": {
